div s created, Logo Design created

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="">About Us</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Portfollo</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="">Conct</a></li>
         </ul>
         </div>
         <hr/>
